--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9000
 spring.datasource.name=insurancemgmt
-spring.datasource.url=jdbc:mysql://localhost:3306/insurancemgmt?ServerTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/insurancemgmt?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=8749
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
